--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,10 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  flutter_svg: ^2.0.9
+  google_sign_in: ^6.2.1
+  firebase_auth: ^5.3.1
+  firebase_core: ^3.3.0
   flutter:
     sdk: flutter
 
@@ -54,6 +58,7 @@ flutter:
   assets:
     - assets/img/awislogo.png
     - assets/img/nasigoreng.png
+    - assets/icons/google.svg
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
