--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   google_sign_in: ^6.2.1
   firebase_auth: ^5.3.1
   firebase_core: ^3.3.0
+  image_picker: ^1.0.4
   flutter:
     sdk: flutter
 
