--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,12 +33,14 @@ dependencies:
   firebase_auth: ^5.3.1
   firebase_core: ^3.3.0
   image_picker: ^1.0.4
+  cupertino_icons: ^1.0.2
+  http: ^1.1.0
+  path_provider: ^2.1.1
+  open_filex: ^4.3.4
+  intl: ^0.18.1
+  
   flutter:
     sdk: flutter
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.8
 
 dev_dependencies:
   flutter_test:
