--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   path_provider: ^2.1.1
   open_filex: ^4.3.4
   intl: ^0.18.1
+  shared_preferences: ^2.5.4
   
   flutter:
     sdk: flutter
