--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   shared_preferences: ^2.5.4
   fl_chart: ^0.69.0
   flutter_launcher_icons: ^0.13.1
+  url_launcher: ^6.2.5
 
   flutter:
     sdk: flutter
